# open3d_snippets

./: CMakeLists.txt  main.cpp
data/: cropped_1.json  cropped_1.ply
src/: PointCloudProcessor.cpp  PointCloudProcessor.h
